fix: broken layout info section in real device

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -320,7 +320,7 @@ main {
   transition: var(--transition-2);
 }
 
-.sidebar.active { max-height: 405px; }
+.sidebar.active { max-height: fit-content; }
 
 .sidebar-info {
   position: relative;
@@ -749,6 +749,7 @@ main {
 }
 
 .timeline-list span {
+  white-space: nowrap;
   color: var(--vegas-gold);
   font-weight: var(--fw-400);
   line-height: 1.6;
